
For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed a bug in the memory accounting of the circuit breaker for HTTP
   results when querying for columns of undefined type.

 - Fixed issue that caused an exception when querying the `_id` column using all
   defined primary keys inside the ``WHERE`` clause over the HTTP API.

 - Fixed wrong results when querying ``IS NULL`` and ``IS NOT NULL`` on an
   array of objects.

 - Fixed an issue that caused an Exception to be thrown on ``JOIN`` queries
   with 4 or more tables when an ``ORDER BY`` is also applied.

 - Fixed an issue that resulted in rows could not be queried by primary keys
   when the order of the primary key columns on insert differs from the order of
   the primary keys on the table definition.
   Note: If records are already inserted by using a different primary key column
   order, they must be re-inserted, otherwise queries will still fail.

 - Improved the resiliency of queries on `sys.nodes`: If a node disconnects
   during the execution of a query it will no longer fail.

 - Added proper handling when memory requirements of a ``JOIN`` query exceeds
   the available memory. Instead of having OutOfMemoryException thrown which
   led to killed nodes in the cluster, the issue is detected and the query is
   killed without affecting the cluster.

 - Fixed an issue that could cause ``DELETE`` statements to fail instead of
   "not matching" if there was a ``_version`` column in the ``WHERE`` clause.

 - Fixed an error handling issue that could lead to the termination of a node
   in very rare cases. (Usually if a user invoked the ``KILL`` statement)
